--- a/angular-feladat-01/src/app/page/login/login.component.html
+++ b/angular-feladat-01/src/app/page/login/login.component.html
@@ -9,7 +9,7 @@
       <p
         *ngIf="emailField.invalid && emailField.touched"
         class="error-message"
-      > Please type a valid email. </p>
+      > Please type a valid email address</p>
       <label
         for="inputEmail"
         class="sr-only"
