--- a/angular-feladat-01/src/app/page/forbidden/forbidden.component.html
+++ b/angular-feladat-01/src/app/page/forbidden/forbidden.component.html
@@ -1,1 +1,6 @@
-<p>forbidden works!</p>
+<div class="row">
+  <div class="col-12 col-md-8 offset-md-2">
+    <div class="alert alert-lg alert-danger mt-5 text-center">
+      You do not have permission to access this page.
+  </div>
+</div>
