Users / minor improvements

--- a/angular-feladat-01/src/app/page/users/users.component.html
+++ b/angular-feladat-01/src/app/page/users/users.component.html
@@ -10,7 +10,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let user of list$ | async">-->
+        <tr *ngFor="let user of list$ | async">
           <td *ngFor="let col of cols">
             {{ user[col.key] }}
           </td>
