--- a/angular-feladat-02/src/app/page/movies/movies.component.html
+++ b/angular-feladat-02/src/app/page/movies/movies.component.html
@@ -1,1 +1,35 @@
-<p>movies works!</p>
+<div class="container-fluid p-4">
+  <div class="row">
+    <div class="col-12">
+      <div class="table-responsive">
+        <table class="table table-dark table-striped">
+          <thead>
+            <tr>
+              <th>#</th>
+              <th>Title</th>
+              <th>Style</th>
+              <th>Year</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let movie of list$ | async">
+              <td>{{ movie.id }}</td>
+              <td>{{ movie.title }}</td>
+              <td>{{ movie.category }}</td>
+              <td>{{ movie.director }}</td>
+              <td>
+                <button
+                  class="btn btn-primary"
+                  routerLink="/movies/{{ movie.id }}"
+                >
+                  Edit
+                </button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
