--- a/angular-feladat-02/src/app/page/user-edit/user-edit.component.html
+++ b/angular-feladat-02/src/app/page/user-edit/user-edit.component.html
@@ -1,4 +1,4 @@
-<!--<div class="row">
+<div class="row">
   <div class="col-12 col-md-6 offset-md-3">
     <form *ngIf="user" #userForm="ngForm" (ngSubmit)="onSubmit(userForm)" class="form">
       <div class="form-group"><label for="">Firstname</label><input
@@ -42,4 +42,3 @@
       </button>
     </form>
   </div>
--->
